adjusted image size to prevent overflow

--- a/styles.css
+++ b/styles.css
@@ -391,7 +391,7 @@ a {
 
     }
     #editorMobileImg  { 
-        width: 800px;
+        width: 750px;
      }
     .features {
         display: flex;
